@@ -15,7 +15,7 @@ context "Array#extract_options!" do
 end
 
 context "Enumerable#send_each" do
-  specify "should send the supplied method to each item" do
+  deprec_specify "should send the supplied method to each item" do
     a = ['abbc', 'bbccdd', 'hebtre']
     a.send_each(:gsub!, 'b', '_')
     a.should == ['a__c', '__ccdd', 'he_tre']
